# openfaas-hey-scaling

./: README.md  watchtower.py
openfaas_watchtower/: Makefile  ftest.py  pyproject.toml  sleepy.py
openfaas_watchtower/openfaas_watchtower/: __init__.py  __main__.py  const.py  watchtower.py
openfaas_watchtower/tests/: test_openfaas_watchtower.py
